# klucv2

./: CMakeLists.txt  ProjectHome.md
anthropometric_eye/src/: CMakeLists.txt  feature_point_detection_from_eye_region.cpp
anthropometric_mouth/src/: CMakeLists.txt  feature_point_detection_from_mouth_region.cpp
common/src/: common.cpp  common.hpp
data/: Thumbs.db  net.xml  sample.csv
docs/: Automated Video Based Facial Expression Analysis of Neuropsychiatric Disorders.htm  Contour Tracing - Defining Connectivity 4-connected.htm  Contour Tracing.htm  Facial Expression - Abu Sayeed Md. Sohail.htm
docs/Automated Video Based Facial Expression Analysis of Neuropsychiatric Disorders_files/: M2  M3  M7  noext-menu.css  pmcbase1.css  pmcstatic.css
docs/Contour Tracing_files/: blank.htm  sqframe.htm
docs/Facial Expression - Abu Sayeed Md. Sohail_files/: completesearch.js
docs/Integralbild – Wikipedia_files/: centralnotice.js  index.php
facedetect_modesto_tips/src/: CMakeLists.txt  facedetect_modesto_tips.cpp
facedetect_roi/src/: facedetect_roi.cpp
klu/KluSharp/: Klu.cs
klu/KluSharp/Properties/: AssemblyInfo.cs
klu/RenameFeedDB/: RenameFeedDB.csproj
klu/RenameFeedDB/Properties/: AssemblyInfo.cs
klu/ffp/: ANN.cs  AboutDialog.xaml  AboutDialog.xaml.cs  AnnDialog.xaml  AnnDialog.xaml.cs  App.xaml  App.xaml.cs  BatchClassification.xaml  BatchClassification.xaml.cs  BatchClassificationDialog.xaml.cs  DataRowValidation.cs  ExpressionComboBoxConverter.cs  ExpressionConverter.cs  ExpressionIDToTextConverter.cs  ExpressionsDialog.xaml  ExpressionsDialog.xaml.cs  ImageToBinaryConverter.cs  MainWindow.xaml  MainWindow.xaml.cs  PlayerControl.xaml  PlayerControl.xaml.cs  Training.sdf  TrainingDataSet.Designer.cs  TrainingDataSet.xsd  TrainingDataSet.xss  TrainingDataSetsDialog.xaml  TrainingDataSetsDialog.xaml.cs  TrainingDialog.xaml  TrainingDialog.xaml.cs  app.config  ffp.csproj
klu/ffp/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
klu/klulib/: ReadMe.txt  common.cpp  klu_common.cpp  klu_common.hpp  klu_types.h  klulib.cpp  klulib.h  klulib.vcproj  stdafx.cpp  stdafx.h  targetver.h
klu/native/: main.cpp
neural_network/src/: neural_network.cpp
trunk/: CMakeLists.txt  README-VS2008.txt
trunk/anthropometric_eye/src/: CMakeLists.txt
trunk/anthropometric_mouth/src/: CMakeLists.txt  feature_point_detection_from_mouth_region.cpp
trunk/common/src/: common.cpp  common.hpp
trunk/data/: Thumbs.db  params.xml  paramsWritten.xml
trunk/docs/: Biometrie Literatur vom Frauenhofer IIS.htm  Haar  Integralbild – Wikipedia.htm  LIBSVM -- A Library for Support Vector Machines.htm  Thumbs.db
trunk/docs/Automated Video Based Facial Expression Analysis of Neuropsychiatric Disorders_files/: 27687.css  31945.js  M1  M4  M5  M6  common.js  data_provider.1.js  noext.menu.js  tileshop_data_db.1.js  xtheme-oldentrez.css
trunk/docs/Biometrie Literatur vom Frauenhofer IIS-Dateien/: styles.css
trunk/docs/Contour Tracing - Defining Connectivity 4-connected_files/: conframe.htm  connect.htm
trunk/docs/Contour Tracing_files/: sqmain.htm
trunk/docs/Integralbild – Wikipedia_files/: index(3).php  index(5).php
trunk/facedetect_modesto_tips/src/: facedetect_modesto_tips.cpp
trunk/facedetect_roi/src/: CMakeLists.txt
trunk/klu/: klu.sln
trunk/klu/KluSharp/: ANN.cs  Klu.cs  KluSharp.csproj  Types.cs
trunk/klu/RenameFeedDB/: Program.cs
trunk/klu/ffp/: AboutDialog.xaml  AnnDialog.xaml  AnnDialog.xaml.cs  App.xaml  BatchClassificationDialog.xaml  BatchClassificationDialog.xaml.cs  ExpressionComboBoxConverter.cs  ExpressionIDToImageConverter.cs  ExpressionsDialog.xaml  ExpressionsDialog.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Training.sdf  TrainingDataSet.Designer.cs  TrainingDataSet.xsd  TrainingDataSet.xss  TrainingDataSetsDialog.xaml  TrainingDialog.xaml  TrainingDialog.xaml.cs  ffp.csproj
trunk/klu/ffp/Properties/: AssemblyInfo.cs  Settings.settings
trunk/klu/klulib/: common.hpp  dllmain.cpp  klu_common.cpp  klu_common.hpp  klu_types.h  klulib.cpp  klulib.h  klulib.vcproj  stdafx.cpp
trunk/klu/native/: native.vcproj
trunk/neural_network/src/: CMakeLists.txt
